k8s/istio/serviceentry-egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: allow-egress-googleapis
  namespace: online-boutique
spec:
  hosts:
    - "accounts.google.com" # used by paymentservice / OAuth token flows
    - "*.googleapis.com"
  ports:
    - number: 80
      protocol: HTTP
      name: http
    - number: 443
      protocol: HTTPS
      name: https
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: allow-egress-google-metadata
  namespace: online-boutique
spec:
  hosts:
    - metadata.google.internal
  addresses:
    - 169.254.169.254 # GCE metadata server (only relevant if running on GCP)
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
